modified:   index.html 	modified:   style.css 	renamed:    video/KakaoTalk_20250725_220952253.mp4 -> "videos/\352\266\214\355\225\230\354\235\200.mp4" 	renamed:    video/KakaoTalk_20250725_131851913.mp4 -> "videos/\353\213\244\353\236\214\354\245\220\354\236\205\353\204\244\353\213\244.mp4" 	renamed:    video/KakaoTalk_20250719_224917370.mp4 -> "videos/\353\214\200\355\225\234\353\257\274\352\265\255\355\226\204\355\206\240\353\246\254.mp4" 	renamed:    video/KakaoTalk_20250725_173548568.mp4 -> "videos/\353\236\221\354\235\264.mp4" 	renamed:    video/KakaoTalk_20250725_220242351.mp4 -> "videos/\354\230\210\353\202\230.mp4" 	renamed:    video/KakaoTalk_20250719_234024401.mp4 -> "videos/\354\234\240\353\246\254.mp4" 	renamed:    video/KakaoTalk_20250724_150254321.mp4 -> "videos/\354\236\245\354\241\260\353\246\274.mp4" 	renamed:    video/KakaoTalk_20250725_194937160.mp4 -> "videos/\355\226\204\354\212\244\355\204\260\354\247\261.mp4" 	renamed:    video/KakaoTalk_20250725_141639035.mp4 -> "videos/\355\230\204\353\257\270\354\260\271\354\214\200\353\260\245.mp4"

--- a/index.html
+++ b/index.html
@@ -15,48 +15,48 @@
   <main class="video-grid">
 
     <section class="video-card">
-      <h2>지민</h2>
-      <video src="videos/jimin.mp4" controls></video>
+      <h2>권하은</h2>
+      <video src="videos/권하은.mp4" controls></video>
     </section>
 
     <section class="video-card">
-      <h2>민지</h2>
-      <video src="videos/minji.mp4" controls></video>
+      <div><h2>유리</h2> <p>(86적힌 반팔티)</p></div>
+      <video src="videos/유리.mp4" controls></video>
     </section>
 
     <section class="video-card">
-      <h2>하늘</h2>
-      <video src="videos/haneul.mp4" controls></video>
+      <h2>현미찹쌀밥</h2>
+      <video src="videos/현미찹쌀밥.mp4" controls></video>
     </section>
 
     <section class="video-card">
-      <h2>수아</h2>
-      <video src="videos/sua.mp4" controls></video>
+      <h2>대한민국햄토리</h2>
+      <video src="videos/대한민국햄토리.mp4" controls></video>
     </section>
 
     <section class="video-card">
-      <h2>예린</h2>
-      <video src="videos/yerin.mp4" controls></video>
+      <h2>장조림</h2>
+      <video src="videos/장조림.mp4" controls></video>
     </section>
 
     <section class="video-card">
-      <h2>유나</h2>
-      <video src="videos/yuna.mp4" controls></video>
+      <h2>다람쥐입네다</h2>
+      <video src="videos/다람쥐입네다.mp4" controls></video>
     </section>
 
     <section class="video-card">
-      <h2>세린</h2>
-      <video src="videos/serin.mp4" controls></video>
+      <h2>랑이</h2>
+      <video src="videos/랑이.mp4" controls></video>
     </section>
 
     <section class="video-card">
-      <h2>나현</h2>
-      <video src="videos/nahyun.mp4" controls></video>
+      <h2>햄스터짱</h2>
+      <video src="videos/햄스터짱.mp4" controls></video>
     </section>
 
     <section class="video-card">
-      <h2>다인</h2>
-      <video src="videos/dain.mp4" controls></video>
+      <h2>예나</h2>
+      <video src="videos/예나.mp4" controls></video>
     </section>
 
   </main>
