modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </main>
 
   <div class="vote-section">
-    <a href="https://naver.me/yourformlink" target="_blank" class="vote-btn">
+    <a href="https://naver.me/GFCpOdPA" target="_blank" class="vote-btn">
       🗳️ 네이버 폼으로 투표하러 가기
     </a>
   </div>
