modified:   index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>댄스 온라인 대회 2025</h1>
-    <p>아래 참가자들의 퍼포먼스를 감상하고, 가장 멋졌던 분께 투표해주세요!</p>
+    <p>아래 참가자들의 퍼포먼스를 감상하고, 참가자에게 점수를 메겨주세요!</p>
   </header>
 
   <main class="video-grid">
